bipToOCamlTranspiler/src/_build/default/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
file' -> . file [ # ]
## Transitions:
-- On NEWLINE shift to state 1
-- On option(NEWLINE) shift to state 2
-- On file shift to state 97
## Reductions:
-- On RETURN PRINT NOT MINUS LSQ LP LET IF IDENT FOR CST
--   reduce production option(NEWLINE) ->

State 1:
## Known stack suffix:
## NEWLINE
## LR(1) items:
option(NEWLINE) -> NEWLINE . [ RETURN PRINT NOT MINUS LSQ LP LET IF IDENT FOR EOF CST ]
## Transitions:
## Reductions:
-- On RETURN PRINT NOT MINUS LSQ LP LET IF IDENT FOR EOF CST
--   reduce production option(NEWLINE) -> NEWLINE

State 2:
## Known stack suffix:
## option(NEWLINE)
## LR(1) items:
file -> option(NEWLINE) . list(def) nonempty_list(stmt) option(NEWLINE) EOF [ # ]
## Transitions:
-- On LET shift to state 3
-- On list(def) shift to state 91
-- On def shift to state 95
## Reductions:
-- On RETURN PRINT NOT MINUS LSQ LP IF IDENT FOR CST
--   reduce production list(def) ->

State 3:
## Known stack suffix:
## LET
## LR(1) items:
def -> LET . ident LP loption(separated_nonempty_list(COMMA,ident)) RP COLON suite [ RETURN PRINT NOT MINUS LSQ LP LET IF IDENT FOR CST ]
## Transitions:
-- On IDENT shift to state 4
-- On ident shift to state 5
## Reductions:

State 4:
## Known stack suffix:
## IDENT
## LR(1) items:
ident -> IDENT . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ LP IN EQUAL DIV COMMA COLON CMP AND ]
## Transitions:
## Reductions:
-- On TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ LP IN EQUAL DIV COMMA COLON CMP AND
--   reduce production ident -> IDENT

State 5:
## Known stack suffix:
## LET ident
## LR(1) items:
def -> LET ident . LP loption(separated_nonempty_list(COMMA,ident)) RP COLON suite [ RETURN PRINT NOT MINUS LSQ LP LET IF IDENT FOR CST ]
## Transitions:
-- On LP shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## LET ident LP
## LR(1) items:
def -> LET ident LP . loption(separated_nonempty_list(COMMA,ident)) RP COLON suite [ RETURN PRINT NOT MINUS LSQ LP LET IF IDENT FOR CST ]
## Transitions:
-- On IDENT shift to state 4
-- On separated_nonempty_list(COMMA,ident) shift to state 7
-- On loption(separated_nonempty_list(COMMA,ident)) shift to state 8
-- On ident shift to state 88
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,ident)) ->

State 7:
## Known stack suffix:
## separated_nonempty_list(COMMA,ident)
## LR(1) items:
loption(separated_nonempty_list(COMMA,ident)) -> separated_nonempty_list(COMMA,ident) . [ RP ]
## Transitions:
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,ident)) -> separated_nonempty_list(COMMA,ident)

State 8:
## Known stack suffix:
## LET ident LP loption(separated_nonempty_list(COMMA,ident))
## LR(1) items:
def -> LET ident LP loption(separated_nonempty_list(COMMA,ident)) . RP COLON suite [ RETURN PRINT NOT MINUS LSQ LP LET IF IDENT FOR CST ]
## Transitions:
-- On RP shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## LET ident LP loption(separated_nonempty_list(COMMA,ident)) RP
## LR(1) items:
def -> LET ident LP loption(separated_nonempty_list(COMMA,ident)) RP . COLON suite [ RETURN PRINT NOT MINUS LSQ LP LET IF IDENT FOR CST ]
## Transitions:
-- On COLON shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## LET ident LP loption(separated_nonempty_list(COMMA,ident)) RP COLON
## LR(1) items:
def -> LET ident LP loption(separated_nonempty_list(COMMA,ident)) RP COLON . suite [ RETURN PRINT NOT MINUS LSQ LP LET IF IDENT FOR CST ]
## Transitions:
-- On RETURN shift to state 11
-- On PRINT shift to state 51
-- On NOT shift to state 12
-- On NEWLINE shift to state 55
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On suite shift to state 87
-- On simple_stmt shift to state 64
-- On ident shift to state 66
-- On expr shift to state 69
## Reductions:

State 11:
## Known stack suffix:
## RETURN
## LR(1) items:
simple_stmt -> RETURN . expr [ NEWLINE ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 50
## Reductions:

State 12:
## Known stack suffix:
## NOT
## LR(1) items:
expr -> NOT . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 49
## Reductions:

State 13:
## Known stack suffix:
## MINUS
## LR(1) items:
expr -> MINUS . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 48
## Reductions:

State 14:
## Known stack suffix:
## LSQ
## LR(1) items:
expr -> LSQ . loption(separated_nonempty_list(COMMA,expr)) RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On separated_nonempty_list(COMMA,expr) shift to state 19
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 46
-- On ident shift to state 17
-- On expr shift to state 22
## Reductions:
-- On RSQ
--   reduce production loption(separated_nonempty_list(COMMA,expr)) ->

State 15:
## Known stack suffix:
## LP
## LR(1) items:
expr -> LP . expr RP [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 44
## Reductions:

State 16:
## Known stack suffix:
## CST
## LR(1) items:
expr -> CST . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
## Reductions:
-- On TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND
--   reduce production expr -> CST

State 17:
## Known stack suffix:
## ident
## LR(1) items:
expr -> ident . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> ident . LP loption(separated_nonempty_list(COMMA,expr)) RP [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On LP shift to state 18
## Reductions:
-- On TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND
--   reduce production expr -> ident

State 18:
## Known stack suffix:
## ident LP
## LR(1) items:
expr -> ident LP . loption(separated_nonempty_list(COMMA,expr)) RP [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On separated_nonempty_list(COMMA,expr) shift to state 19
-- On loption(separated_nonempty_list(COMMA,expr)) shift to state 20
-- On ident shift to state 17
-- On expr shift to state 22
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,expr)) ->

State 19:
## Known stack suffix:
## separated_nonempty_list(COMMA,expr)
## LR(1) items:
loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr) . [ RSQ RP ]
## Transitions:
## Reductions:
-- On RSQ RP
--   reduce production loption(separated_nonempty_list(COMMA,expr)) -> separated_nonempty_list(COMMA,expr)

State 20:
## Known stack suffix:
## ident LP loption(separated_nonempty_list(COMMA,expr))
## LR(1) items:
expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) . RP [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On RP shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## ident LP loption(separated_nonempty_list(COMMA,expr)) RP
## LR(1) items:
expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
## Reductions:
-- On TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND
--   reduce production expr -> ident LP loption(separated_nonempty_list(COMMA,expr)) RP

State 22:
## Known stack suffix:
## expr
## LR(1) items:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR MOD MINUS LSQ DIV COMMA CMP AND ]
separated_nonempty_list(COMMA,expr) -> expr . [ RSQ RP ]
separated_nonempty_list(COMMA,expr) -> expr . COMMA separated_nonempty_list(COMMA,expr) [ RSQ RP ]
## Transitions:
-- On TIMES shift to state 23
-- On PLUS shift to state 28
-- On OR shift to state 34
-- On MOD shift to state 30
-- On MINUS shift to state 36
-- On LSQ shift to state 25
-- On DIV shift to state 32
-- On COMMA shift to state 42
-- On CMP shift to state 38
-- On AND shift to state 40
## Reductions:
-- On RSQ RP
--   reduce production separated_nonempty_list(COMMA,expr) -> expr

State 23:
## Known stack suffix:
## expr TIMES
## LR(1) items:
expr -> expr TIMES . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## expr TIMES expr
## LR(1) items:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr TIMES expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On LSQ shift to state 25
## Reductions:
-- On TIMES RSQ RP PLUS OR NEWLINE MOD MINUS DIV COMMA COLON CMP AND
--   reduce production expr -> expr TIMES expr

State 25:
## Known stack suffix:
## expr LSQ
## LR(1) items:
expr -> expr LSQ . expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## expr LSQ expr
## LR(1) items:
expr -> expr . LSQ expr RSQ [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr LSQ expr . RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . AND expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
expr -> expr . OR expr [ TIMES RSQ PLUS OR MOD MINUS LSQ DIV CMP AND ]
## Transitions:
-- On TIMES shift to state 23
-- On RSQ shift to state 27
-- On PLUS shift to state 28
-- On OR shift to state 34
-- On MOD shift to state 30
-- On MINUS shift to state 36
-- On LSQ shift to state 25
-- On DIV shift to state 32
-- On CMP shift to state 38
-- On AND shift to state 40
## Reductions:

State 27:
## Known stack suffix:
## expr LSQ expr RSQ
## LR(1) items:
expr -> expr LSQ expr RSQ . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
## Reductions:
-- On TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND
--   reduce production expr -> expr LSQ expr RSQ

State 28:
## Known stack suffix:
## expr PLUS
## LR(1) items:
expr -> expr PLUS . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## expr PLUS expr
## LR(1) items:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr PLUS expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On TIMES shift to state 23
-- On MOD shift to state 30
-- On LSQ shift to state 25
-- On DIV shift to state 32
## Reductions:
-- On RSQ RP PLUS OR NEWLINE MINUS COMMA COLON CMP AND
--   reduce production expr -> expr PLUS expr

State 30:
## Known stack suffix:
## expr MOD
## LR(1) items:
expr -> expr MOD . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## expr MOD expr
## LR(1) items:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr MOD expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On LSQ shift to state 25
## Reductions:
-- On TIMES RSQ RP PLUS OR NEWLINE MOD MINUS DIV COMMA COLON CMP AND
--   reduce production expr -> expr MOD expr

State 32:
## Known stack suffix:
## expr DIV
## LR(1) items:
expr -> expr DIV . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## expr DIV expr
## LR(1) items:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr DIV expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On LSQ shift to state 25
## Reductions:
-- On TIMES RSQ RP PLUS OR NEWLINE MOD MINUS DIV COMMA COLON CMP AND
--   reduce production expr -> expr DIV expr

State 34:
## Known stack suffix:
## expr OR
## LR(1) items:
expr -> expr OR . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## expr OR expr
## LR(1) items:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr OR expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On TIMES shift to state 23
-- On PLUS shift to state 28
-- On MOD shift to state 30
-- On MINUS shift to state 36
-- On LSQ shift to state 25
-- On DIV shift to state 32
-- On CMP shift to state 38
-- On AND shift to state 40
## Reductions:
-- On RSQ RP OR NEWLINE COMMA COLON
--   reduce production expr -> expr OR expr

State 36:
## Known stack suffix:
## expr MINUS
## LR(1) items:
expr -> expr MINUS . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 37
## Reductions:

State 37:
## Known stack suffix:
## expr MINUS expr
## LR(1) items:
expr -> expr . LSQ expr RSQ [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . PLUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MINUS expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr MINUS expr . [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . TIMES expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . DIV expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . MOD expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . CMP expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . AND expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
expr -> expr . OR expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On TIMES shift to state 23
-- On MOD shift to state 30
-- On LSQ shift to state 25
-- On DIV shift to state 32
## Reductions:
-- On RSQ RP PLUS OR NEWLINE MINUS COMMA COLON CMP AND
--   reduce production expr -> expr MINUS expr

State 38:
## Known stack suffix:
## expr CMP
## LR(1) items:
expr -> expr CMP . expr [ TIMES RSQ RP PLUS OR NEWLINE MOD MINUS LSQ DIV COMMA COLON CMP AND ]
## Transitions:
-- On NOT shift to state 12
-- On MINUS shift to state 13
-- On LSQ shift to state 14
-- On LP shift to state 15
-- On IDENT shift to state 4
-- On CST shift to state 16
-- On ident shift to state 17
-- On expr shift to state 39
## Reductions:
